--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <body>
         <!-- build:js(app) scripts/components.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/handlebars/handlebars.runtime.js"></script>
         <script src="@@ember"></script>
         <script src="@@ember_data"></script>
