--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="mocha"></div>
+    <script src="../app/bower_components/jquery/dist/jquery.js"></script>
+	<script src="../app/bower_components/underscore/underscore.js"></script>	
     <script src="bower_components/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="bower_components/chai/chai.js"></script>
