--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="mocha"></div>
+	<script src='http://maps.google.com/maps/api/js?sensor=false'></script>
     <script src="../app/bower_components/jquery/dist/jquery.js"></script>
 	<script src="../app/bower_components/underscore/underscore.js"></script>	
     <script src="bower_components/mocha/mocha.js"></script>
