add configure to app and support browserify

--- a/app/index.html
+++ b/app/index.html
@@ -50,5 +50,9 @@
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
         <!-- endbuild -->
+		
+        <!-- build:js scripts/configure.js -->
+        <script src="configures/configure.js"></script>
+        <!-- endbuild -->
 </body>
 </html>
