identify in maps

--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,7 @@
         <!-- build:js(app) scripts/components.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/underscore/underscore.js"></script>
+		<script src="bower_components/yepnope/yepnope.js"></script>
         <!-- endbuild -->
 
 
