identify polygon layers

--- a/app/index.html
+++ b/app/index.html
@@ -124,6 +124,7 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/underscore/underscore.js"></script>
 		<script src="bower_components/yepnope/yepnope.js"></script>
+		<script src="bower_components/infobox/infobox.js"></script>
         <!-- endbuild -->
 
 
