--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 			<p>Full dataset is available on the <a href="/environment/en/resources/collection/data_downloads/index.htm" target="">MOE data download page</a>.</p>
 				<div id="searchControl"></div>
 				<div id="map_canvas" style="width: 700px; height:540px;"></div>
-				<div id="coordinates">aa</div>
+				<div id="coordinates"></div>
 				<div id="query_table"  style="width: 700px;"></div>	
 				<div id="otherInfo"></div>
 				<div id="disclaimer"></div>	
