--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 <style>
-.datatablerowhighlight {
-    background-color: #ECFFB3 !important;
-}
+		.datatablerowhighlight {
+			background-color: #ECFFB3 !important;
+		}
 		#contact label{
 			display: inline-block;
 			width: 100px;
@@ -55,7 +55,6 @@
 	
 </style>
  <link href="bower_components/jquery-impromptu/jquery-impromptu.min.css" rel="stylesheet">
-	
   </head>
   <body>
  		<!--MOE MAP-->
@@ -75,12 +74,12 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <!-- build:js(app) scripts/components.js -->
-		<script src="bower_components/underscore/underscore.js"></script>
+		<!--<script src="bower_components/underscore/underscore.js"></script>
 		<script src="bower_components/yepnope/yepnope.js"></script>
 		<script src="bower_components/arcgislink/arcgislink.js"></script>
 		<script src="bower_components/jquery-impromptu/jquery-impromptu.min.js"></script>
 		<script src="bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
-		<script src="bower_components/jquery.ui/ui/jquery.ui.datepicker.js"></script>
+		<script src="bower_components/jquery.ui/ui/jquery.ui.datepicker.js"></script>-->
         <!-- endbuild -->
 
 
