--- a/app/index.html
+++ b/app/index.html
@@ -15,46 +15,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<style>
-		.datatablerowhighlight {
-			background-color: #ECFFB3 !important;
-		}
-		#contact label{
-			display: inline-block;
-			width: 100px;
-			text-align: right;
-		}
-		#contact_submit{
-			padding-left: 100px;
-		}
-		#contact div{
-			margin-top: 1em;
-		}
-		textarea{
-			vertical-align: top;
-			height: 5em;
-		}
-			
-		.error{
-			display: none;
-			margin-left: 10px;
-		}		
-		
-		.error_show{
-			color: red;
-			margin-left: 10px;
-		}
-		
-		input.invalid, textarea.invalid{
-			border: 2px solid red;
-		}
-		
-		input.valid, textarea.valid{
-			border: 2px solid green;
-		}
-	
-</style>
- <link href="bower_components/jquery-impromptu/jquery-impromptu.min.css" rel="stylesheet">
+ <link href="configures/configure.css" rel="stylesheet">
   </head>
   <body>
  		<!--MOE MAP-->
