--- a/app/index.html
+++ b/app/index.html
@@ -19,15 +19,13 @@
   </head>
   <body>
  		<!--MOE MAP-->
-			 <h1>Guide to Eating Ontario Sport Fish (2013-2014)</h1>
-			<p>This interactive map allows you to search and view consumption advice for sport fish from lakes and rivers that are part of the Guide to Eating Ontario Sport Fish.</p>
-			<p>Full dataset is available on the <a href="/environment/en/resources/collection/data_downloads/index.htm" target="">MOE data download page</a>.</p>
+			 <h1>MOECC Facilities Map Editor</h1>
+			<p>This interactive map allows you to add, delete, update MOECC facilities information.</p>
+			<p>Please click on <a href="https://lrctptvsuaap003:6443/arcgis/" target="_blank">here</a> firstly to make sure you accept the self-signed SSL on ArcGIS server.</p>
 				<div id="searchControl"></div>
-				<div id="map_canvas" style="width: 700px; height:540px;"></div>
+				<div id="map_canvas" style="width: 700px; height:540px; display:none;"></div>
 				<div id="coordinates"></div>
 				<div id="query_table"  style="width: 700px;"></div>	
-				<div id="otherInfo"></div>
-				<div id="disclaimer"></div>	
 		<!--MOE MAP-->
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -35,12 +33,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <!-- build:js(app) scripts/components.js -->
-		<!--<script src="bower_components/underscore/underscore.js"></script>
-		<script src="bower_components/yepnope/yepnope.js"></script>
-		<script src="bower_components/arcgislink/arcgislink.js"></script>
-		<script src="bower_components/jquery-impromptu/jquery-impromptu.min.js"></script>
-		<script src="bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
-		<script src="bower_components/jquery.ui/ui/jquery.ui.datepicker.js"></script>-->
         <!-- endbuild -->
 
 
