--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
  		<!--MOE MAP-->
-			 <h1>MOECC Facilities Map Editor</h1>
+			 <h1>MOECC Facilities Dashboard Editor</h1>
 			<p>This interactive map allows you to add, delete, update MOECC facilities information.</p>
 			<p>Please click on <a href="https://lrctptvsuaap003:6443/arcgis/" target="_blank">here</a> firstly to make sure you accept the self-signed SSL on ArcGIS server.</p>
 				<div id="searchControl"></div>
